# issue-triage

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
app/: __init__.py  cli.py  config.py  embeddings.py  github.py  main.py  schemas.py  service.py  store.py
evaluation/: README.md  __init__.py  build_corpus.py  collect_duplicates.py  evaluate.py  hydrate_candidates.py  models.py  retrievers.py
evaluation/datasets/: candidates.json  corpus_manifest.json
evaluation/results/: 20260721T214312Z-flutter-flutter.csv  20260721T214312Z-flutter-flutter.json  20260721T214346Z-flutter-flutter.csv  20260721T214346Z-flutter-flutter.json  20260721T215250Z-flutter-flutter.csv  20260721T215250Z-flutter-flutter.json  20260721T231715Z-flutter-flutter-dense-baseline.csv  20260721T231715Z-flutter-flutter-dense-baseline.json  20260721T231803Z-flutter-flutter-tfidf-baseline.csv  20260721T231803Z-flutter-flutter-tfidf-baseline.json  20260721T232123Z-flutter-flutter-hybrid-baseline-75.csv  20260721T232123Z-flutter-flutter-hybrid-baseline-75.json  20260721T232506Z-flutter-flutter-rrf-baseline-60.csv  20260721T232506Z-flutter-flutter-rrf-baseline-60.json  20260721T235544Z-flutter-flutter-rerank-baseline-10.csv  20260721T235544Z-flutter-flutter-rerank-baseline-10.json  20260722T000121Z-flutter-flutter-rerank-baseline-20.csv  20260722T000121Z-flutter-flutter-rerank-baseline-20.json  20260723T181725Z-flutter-flutter-dense-baseline.csv  (+9 more)
tests/: test_build_corpus.py  test_evaluation.py  test_evaluation_retrievers.py  test_label_collection.py  test_service.py  test_store.py
