[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "issue-triage-ai"
version = "0.1.0"
description = "Find semantically similar GitHub issues with local embeddings."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "numpy>=2.0,<3",
  "pydantic>=2.8,<3",
  "python-dotenv>=1.0,<2",
  "sentence-transformers>=3.0,<6",
  "typer>=0.12,<1",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "pytest-cov>=5,<8",
  "respx>=0.21,<1",
  "ruff>=0.6,<1",
]

[project.scripts]
issue-triage = "app.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

